--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <link rel="stylesheet" href="./src/index.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>03-react-movies</title>
+    <title>04-react-query</title>
   </head>
   <body>
     <div id="root"></div>
